Fix weird h1 letter spacing

--- a/client/src/components/FeaturedProducts/featuredProducts.scss
+++ b/client/src/components/FeaturedProducts/featuredProducts.scss
@@ -11,6 +11,7 @@
 
     h1 {
       flex: 1 !important;
+      letter-spacing: -0.1rem;
     }
     p {
       flex: 1 !important;
